--- a/pages/home.html
+++ b/pages/home.html
@@ -141,7 +141,8 @@ __          __        _      ______                      _
                     <div class="work-experience-place">
                         <h3>3MAPS - <span class="job-description"><i>Fullstack Software Developer</i></span></h3>
                         <p>Developing innovative business solutions in the Industry 4.0 using JavaScript, VueJS,
-                            VuetifyJS, Laravel, NodeJS, PostgreSQL, Redis, RethinkDB, Docker, Azure and 3D modeling
+                            VuetifyJS, Laravel, NodeJS, PostgreSQL, Redis, RethinkDB, Jest, Cypress, Docker, Azure and
+                            3D modeling
                             software</p>
                     </div>
                     <p><i>June 2020 - Present</i></p>
@@ -165,9 +166,31 @@ __          __        _      ______                      _
                                 Frameworks & Technologies
                             </td>
                             <td class="table-skill">
-                                Laravel, NodeJS, VueJS, VuetifyJS, ThreeJS,
-                                MongoDB, PostgreSQL, Redis, RethinkDB, RabbitMQ,
-                                Postman, Blender, Unreal Engine, Git, Docker
+                                VueJS, VuetifyJS, ThreeJS, Laravel, NodeJS
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="table-head">
+                                Databases
+                            </td>
+                            <td class="table-skill">
+                                PostgreSQL, MongoDB, Redis, RethinkDB
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="table-head">
+                                Testing Frameworks
+                            </td>
+                            <td class="table-skill">
+                                Jest, Cypress
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="table-head">
+                                Tools
+                            </td>
+                            <td class="table-skill">
+                                Docker, Postman
                             </td>
                         </tr>
                         <tr>
@@ -240,7 +263,7 @@ __          __        _      ______                      _
                     <div class="project-image-description">
                         <img class="project-image" src="../assets/projects/navplanning.png" alt="3NAV">
 
-                        <p>The NavPlanning platform facilitates the management of ship moorings in ports and the
+                        <p>NavPlanning platform facilitates the management of ship moorings in ports and the
                             planning of arrivals and departures through an interactive map. This solution integrates
                             with the Single Logistics Window, the official declaration system for announcing and
                             processing procedures among port agents, and allows for real-time map visualization of ships
@@ -258,8 +281,7 @@ __          __        _      ______                      _
                     <h2 class="project-title">Shorex</h2>
                     <div class="project-image-description">
                         <img class="project-image" src="../assets/projects/shorex.png" alt="3SHOREX">
-
-                        <p>The 3Shorex platform constitutes a spatial data infrastructure designed to consolidate the
+                        <p>3Shorex platform constitutes a spatial data infrastructure designed to consolidate the
                             geographical information of clients (parking spaces) into a single database. This solution
                             allows for managing port accesses related to both cruise activities (shorex entries) and
                             non-shorex activities (port personnel, cargo handling). It also enables the management of
@@ -274,6 +296,22 @@ __          __        _      ______                      _
                         <p>3Shorex allows port authorities to issue entrances or approve entry requests sent by service
                             providers. It utilizes QR codes for security validation at the port entrance. All validated
                             entries are displayed on a map, providing a real-time view of the space being occupied.</p>
+                    </div>
+                </div>
+                <hr class="solid">
+                <div class="project">
+                    <h2 class="project-title">Todoist</h2>
+                    <div class="project-image-description">
+                        <img class="project-image" src="../assets/projects/todoist2.png" alt="Todoist2">
+                        <p>Todoist is a web-based Task Management Dashboard developed using Node.js, Vue 3, and Vuetify.
+                            This platform enhances team collaboration through real-time task tracking and intuitive
+                            visualization. It features a responsive design with real-time updates via websockets,
+                            allowing for seamless task organization and user-specific task views.
+                        </p>
+                        <p>The system allows the registry of users, and enables them to create, assign, define and
+                            prioritize tasks.
+                        </p>
+
                     </div>
                 </div>
                 <hr class="solid">
