--- a/pages/home.html
+++ b/pages/home.html
@@ -67,13 +67,13 @@
                     <div class="education-school">
                         <h3>Instituto Superior de Engenharia do Porto, ISEP</h3>
                         <h4><i>Polytechnic of Porto - School of Engineering</i></h4>
-                        <p>Master's Degree in Graphics Systems and Multimedia</p>
+                        <p>Master's Degree in Informatics Engineering - Graphics Systems and Multimedia</p>
                     </div>
                     <p><i>September 2020 - July 2022</i></p>
                 </div>
                 <br>
                 <div class="education-articles">
-                    <h3>Articles related to the master's degree:</h3>
+                    <h3>Articles related to my master's degree:</h3>
                     <p>
                         <a href="https://scholar.google.com/citations?view_op=view_citation&hl=pt-PT&user=JiQfOsUAAAAJ&citation_for_view=JiQfOsUAAAAJ:u5HHmVD_uO8C"
                             target="_blank">
@@ -338,14 +338,14 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Swimming</h2>
-                    <p>Swimming has been a long-standing passion of mine, and I have practiced consistently for over a
+                    <p class="interest-desc">Swimming has been a long-standing passion of mine, and I have practiced consistently for over a
                         decade. Even though I no longer swim actively, I still find time to hit the pool now and then,
                         enjoying the tranquility and physical benefits it provides. </p>
                 </div>
                 <hr class="solid">
                 <div class="interest">
                     <h2>Painting & Drawing</h2>
-                    <p>I spent about ten years drawing and painting in an atelier, learning new techniques and
+                    <p class="interest-desc">I spent about ten years drawing and painting in an atelier, learning new techniques and
                         experimenting with various canvas.</p>
                     <p>Some of my paintings:</p>
                     <div class="images">
@@ -373,7 +373,7 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Gaming</h2>
-                    <p>Gaming has been a constant in my life, with a love for video games that has grown stronger. From
+                    <p class="interest-desc">Gaming has been a constant in my life, with a love for video games that has grown stronger. From
                         casual play to competitive gaming, I've always been driven by the challenge and excitement that
                         games offer.This deep involvement naturally sparked an interest in game development.</p>
                     <p>Some of my favorite games:</p>
@@ -403,7 +403,7 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Watching Series & Movies & Anime</h2>
-                    <p> In addition to these hobbies, I have a passion for watching series, movies, and anime. Whether
+                    <p class="interest-desc"> In addition to these hobbies, I have a passion for watching series, movies, and anime. Whether
                         it's diving into a captivating storyline or appreciating the artistry of animation, I love
                         immersing myself in different worlds and narratives in my spare time.</p>
                     <p>Some of my favorite:</p>
@@ -428,7 +428,7 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Reading Books</h2>
-                    <p>I'm really into books on finance and psychology—they're my go-to when I want to learn something
+                    <p class="interest-desc">I'm really into books on finance and psychology—they're my go-to when I want to learn something
                         new. I love how they offer a mix of practical life advice and a deeper understanding of how the
                         mind works. It's fascinating to dig into the complexities of human behavior while also picking
                         up tips on managing finances and making smarter decisions.
