--- a/pages/home.html
+++ b/pages/home.html
@@ -127,10 +127,14 @@ __          __        _      ______                      _
                 <div class="work-experience-section">
                     <div class="work-experience-place">
                         <h3>3MAPS - <span class="job-description"><i>Fullstack Software Developer</i></span></h3>
-                        <p>Developing innovative business solutions in the Industry 4.0 using JavaScript, VueJS,
-                            VuetifyJS, Laravel, NodeJS, PostgreSQL, Redis, RethinkDB, Jest, Cypress, Docker, Azure and
-                            3D modeling
-                            software</p>
+                        <p>- Developed and implemented innovative web applications for maritime port operations
+                            and
+                            the AEC industry</p>
+                        <p>- Contributed to key phases of the software development lifecycle, from concept to
+                            implementation</p>
+                        <p>- Utilized containerization technologies for efficient and consistent development
+                            environments
+                        </p>
                     </div>
                     <p><i>June 2020 - Present</i></p>
                 </div>
@@ -139,8 +143,7 @@ __          __        _      ______                      _
                 <div class="work-experience-section">
                     <div class="work-experience-place">
                         <h3>INESC TEC & 3MAPS - <span class="job-description"><i>Internship</i></span></h3>
-                        <p>Started the development of a Digital Twin of Leix˜oes Port using JavaScript, ThreeJS, VueJS
-                            and VuetifyJS</p>
+                        <p>- Developed a web application that was a Digital Twin of Leixões Port's container park</p>
                     </div>
                     <p><i>February 2020 - June 2020</i></p>
                 </div>
@@ -338,14 +341,16 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Swimming</h2>
-                    <p class="interest-desc">Swimming has been a long-standing passion of mine, and I have practiced consistently for over a
+                    <p class="interest-desc">Swimming has been a long-standing passion of mine, and I have practiced
+                        consistently for over a
                         decade. Even though I no longer swim actively, I still find time to hit the pool now and then,
                         enjoying the tranquility and physical benefits it provides. </p>
                 </div>
                 <hr class="solid">
                 <div class="interest">
                     <h2>Painting & Drawing</h2>
-                    <p class="interest-desc">I spent about ten years drawing and painting in an atelier, learning new techniques and
+                    <p class="interest-desc">I spent about ten years drawing and painting in an atelier, learning new
+                        techniques and
                         experimenting with various canvas.</p>
                     <p>Some of my paintings:</p>
                     <div class="images">
@@ -373,7 +378,8 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Gaming</h2>
-                    <p class="interest-desc">Gaming has been a constant in my life, with a love for video games that has grown stronger. From
+                    <p class="interest-desc">Gaming has been a constant in my life, with a love for video games that has
+                        grown stronger. From
                         casual play to competitive gaming, I've always been driven by the challenge and excitement that
                         games offer.This deep involvement naturally sparked an interest in game development.</p>
                     <p>Some of my favorite games:</p>
@@ -403,7 +409,8 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Watching Series & Movies & Anime</h2>
-                    <p class="interest-desc"> In addition to these hobbies, I have a passion for watching series, movies, and anime. Whether
+                    <p class="interest-desc"> In addition to these hobbies, I have a passion for watching series,
+                        movies, and anime. Whether
                         it's diving into a captivating storyline or appreciating the artistry of animation, I love
                         immersing myself in different worlds and narratives in my spare time.</p>
                     <p>Some of my favorite:</p>
@@ -428,7 +435,8 @@ __          __        _      ______                      _
                 <hr class="solid">
                 <div class="interest">
                     <h2>Reading Books</h2>
-                    <p class="interest-desc">I'm really into books on finance and psychology—they're my go-to when I want to learn something
+                    <p class="interest-desc">I'm really into books on finance and psychology—they're my go-to when I
+                        want to learn something
                         new. I love how they offer a mix of practical life advice and a deeper understanding of how the
                         mind works. It's fascinating to dig into the complexities of human behavior while also picking
                         up tips on managing finances and making smarter decisions.
