--- a/pages/home.html
+++ b/pages/home.html
@@ -302,10 +302,10 @@ __          __        _      ______                      _
                     <h2 class="project-title">Todoist</h2>
                     <div class="project-image-description">
                         <img class="project-image" src="../assets/projects/todoist2.png" alt="Todoist2">
-                        <p>Todoist is a web-based Task Management Dashboard developed using Node.js, Vue 3, and Vuetify.
+                        <p>Todoist is a web application Task Management Dashboard developed using Node.js, Vue 3, and Vuetify.
                             This platform enhances team collaboration through real-time task tracking and intuitive
                             visualization. It features a responsive design with real-time updates via websockets,
-                            allowing for seamless task organization and user-specific task views.
+                            allowing for seamless task organization and user-specific task visualization.
                         </p>
                         <p>The system allows the registry of users, and enables them to create, assign, define and
                             prioritize tasks.
