--- a/pages/home.html
+++ b/pages/home.html
@@ -143,7 +143,7 @@ __          __        _      ______                      _
                 <div class="work-experience-section">
                     <div class="work-experience-place">
                         <h3>INESC TEC & 3MAPS - <span class="job-description"><i>Internship</i></span></h3>
-                        <p>- Developed a web application that was a Digital Twin of Leixões Port's container park</p>
+                        <p>- Developed a web application of Leixões Port's container park operations</p>
                     </div>
                     <p><i>February 2020 - June 2020</i></p>
                 </div>
